<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/properties"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <LinearLayout
            android:id="@+id/file_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_title">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/file_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="asdfghjkl \n g" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/file_path_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/file_name_layout">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="File Path" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_file_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="asdfghjkl \n g" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/file_size_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/file_path_layout">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/file_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_file_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asdfghjkl_n_g" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/file_modified_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/file_size_layout">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/last_modified" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_file_modified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asdfghjkl_n_g" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detail_ok"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_horizontal"
            android:text="@string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/file_modified_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>